[package]
name = "r_synth"
version = "0.1.0"
authors = ["Jo Phillips <joxphillips@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bae_rs = "0.12.1"
cpal = "0.11.0"
rand = {version = "0.7.3", features = ["small_rng"]}
anyhow = "1.0.28"

