[package] 
name = "r_synth"
version = "0.1.0"
authors = ["Jo Phillips <joxphillips@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14"
nannou_audio = "0.14.0"
sqlite = "0.25.0"
rand = "0.7.3"
